<?xml version="1.0" encoding="utf-8"?>
	   
	 <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >  
        
	     
	     
	     <LinearLayout
   
   			 android:layout_width="fill_parent"
    		 android:layout_height="50dp"
    		android:background="@drawable/selector_current"
   			 android:orientation="horizontal"
    		android:padding="2dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/tab_pressed"
        android:clickable="true"
       
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >


            
            <ImageButton
                android:id="@+id/bplanet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
               android:background="@drawable/planet"
               />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/selector_current"
        android:clickable="true"
       
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

           

            <ImageButton
                android:id="@+id/starbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
               android:background="@drawable/fstar"
               />
        </LinearLayout>
    </LinearLayout>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/selector_current"
        android:clickable="true"
       
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

           

           <ImageButton
                android:id="@+id/bviewsolarsystem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
               android:background="@drawable/solar"
               />
        </LinearLayout>
    </LinearLayout>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/selector_current"
        android:clickable="true"
      
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

           

            <ImageButton
                android:id="@+id/bconst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
               android:background="@drawable/cons"
               />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:scrollHorizontally="false" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    
        <TextView
            android:id="@+id/Text1"
        	android:ellipsize="none"
        	android:scrollHorizontally="false"
			android:maxLines="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info"
            android:layout_weight="0.82"
            android:ems="10"
            android:singleLine="false"
         	android:padding="10dp" >

        </TextView>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:padding="10dp" />

        <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Text1"
            style="@style/StarRatingBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="118dp"
            android:stepSize="0.1" />

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/ratingBar1"
            android:layout_below="@+id/ratingBar1"
            android:layout_marginTop="42dp"
           style="@style/StarRatingBar"
            android:stepSize="0.1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ratingBar2"
            android:layout_below="@+id/ratingBar1"
            android:layout_marginTop="22dp"
            android:text="@string/sphratings" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratingBar2"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="57dp"
            android:gravity="fill_horizontal" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/massinfo" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radieinfo" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                   android:text="@string/densinfo" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gravinfo" />
            </TableRow>
            
            
             <TableRow
                android:id="@+id/tableRow11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/textViewtryck"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atmosinfo" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/textViewflykt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/flyktinfo" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/hoger_tabell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_toRightOf="@+id/tableLayout1"
            android:layout_alignTop="@+id/tableLayout1" >

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tryck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/flykt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_below="@+id/imageView1"
            android:text="" />
       

          <TextView
              android:id="@+id/textView1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBottom="@+id/ratingBar1"
              android:layout_alignLeft="@+id/ratingBar1"
              android:layout_marginBottom="58dp"
              android:text="@string/esiratings" />

    </RelativeLayout>
       

    </ScrollView>
    
   
        
   </RelativeLayout>